--- a/about.html
+++ b/about.html
@@ -121,7 +121,9 @@
     </div>
   <ul class="ul-div-team">
     <li class="li-team team-1">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/RUBAL SIR.png" alt=""></span>
+      <div class="img">
+        <img class="img-carousel-2" src="./Assets/images/AboutImages/RUBAL SIR.png" alt="">
+      </div>
       <div class="data-div-team">
         <p class="name">Rubal</p>
         <p class="role">Director, Writer</p>
@@ -129,7 +131,9 @@
       </div>
     </li>
     <li class="li-team team-2">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/RAJESH SIR .png" alt=""></span>
+      <div class="img">
+        <img class="img-carousel-2" src="./Assets/images/AboutImages/RAJESH SIR .png" alt="">
+      </div>
       <div class="data-div-team">
         <p class="name">Rajesh Parihar</p>
         <p class="role">Post Head</p>
@@ -137,7 +141,9 @@
       </div>
     </li>
     <li class="li-team team-3">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/Namit copy.png" alt=""></span>
+      <div class="img">
+        <img class="img-carousel-2" src="./Assets/images/AboutImages/Namit copy.png" alt="">
+      </div>
       <div class="data-div-team">
         <p class="name">Namit Gogia</p>
         <p class="role">Executive Producer</p>
@@ -145,7 +151,9 @@
       </div>
     </li>
     <li class="li-team team-4">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/shobhit .png" alt=""></span>
+      <div class="img">
+          <img class="img-carousel-2" src="./Assets/images/AboutImages/shobhit .png" alt="">
+      </div>
       <div class="data-div-team">
         <p class="name">Shobhit Malhotra </p>
         <p class="role">Assistant Director</p>
@@ -153,7 +161,9 @@
       </div>
     </li>
     <li class="li-team team-5">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/ANJALI .png" alt=""></span>
+      <div class="img">
+        <img class="img-carousel-2" src="./Assets/images/AboutImages/ANJALI .png" alt="">
+      </div>
       <div class="data-div-team">
         <p class="name">Anjali Prasad</p>
         <p class="role">Creative Producer</p>
@@ -166,7 +176,7 @@
     <div class="carousel__slider">
       <ul class="carousel__list">
         <li class="carousel__item">
-          <span><img class="img-carousel" src="./Assets/images/AboutImages/a.png" alt=""></span>
+          <span class="img-carousel"><img class="img-carousel-2" src="./Assets/images/AboutImages/a.png" alt=""></span>
           <div class="">
             <p class="name">Name</p>
             <p class="role">Role</p>
@@ -174,7 +184,7 @@
           </div>
         </li>
         <li class="carousel__item-2 carousel__item">
-          <span><img class="img-carousel" src="./Assets/images/AboutImages/b.png" alt=""></span>
+          <span class="img-carousel"><img class="img-carousel-2" src="./Assets/images/AboutImages/b.png" alt=""></span>
           <div class="">
             <p class="name">Name</p>
             <p class="role">Role</p>
@@ -182,7 +192,7 @@
           </div>
         </li>
         <li class="carousel__item-3 carousel__item">
-          <span><img class="img-carousel" src="./Assets/images/AboutImages/c.jpeg" alt=""></span>
+          <span class="img-carousel"><img src="./Assets/images/AboutImages/c.jpeg" alt=""></span>
           <div class="">
             <p class="name">Name</p>
             <p class="role">Role</p>
@@ -190,7 +200,7 @@
           </div>
         </li>
         <li class="carousel__item-4 carousel__item">
-          <span><img class="img-carousel" src="./Assets/images/AboutImages/d.png" alt=""></span>
+          <span class="img-carousel"><img src="./Assets/images/AboutImages/d.png" alt=""></span>
           <div class="">
             <p class="name">Name</p>
             <p class="role">Role</p>
