--- a/animations.html
+++ b/animations.html
@@ -42,22 +42,22 @@
     <div class="animations-grid-div">
       <div class="gray-color" style="background-color: #232931;">
         <video src="./Assets/videos/whirlpool.mp4" type="video/mp4" 
-        muted class="vid" loop>
+         class="vid" loop>
         </video>
     </div>
     <div class="gray-color" style="background-color: #232931;">
         <video src="./Assets/videos/coats.mp4" type="video/mp4" 
-        muted class="vid" loop>
+         class="vid" loop>
     </video>
     </div>
     <div class="gray-color" style="background-color: #232931;">
         <video src="./Assets/videos/coats2.mp4" type="video/mp4" 
-        muted class="vid" loop>
+         class="vid" loop>
     </video>
     </div>
     <div class="gray-color" style="background-color: #232931;">
         <video src="./Assets/videos/canon.mp4" type="video/mp4" 
-        muted class="vid" loop>
+         class="vid" loop>
     </video>
     </div>
   </div>
