--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="normal-lg-text">
                         <p class="description-contact">reachus@shadedfeather.com</p>
-                        <p class="description-contact">anjali.p@shadedfeather.com</p>
+                        <p class="description-contact">jobs@shadedfeather.com</p>
                     </div>
                 </div>
         </div>
