--- a/films.html
+++ b/films.html
@@ -40,125 +40,65 @@
   <div class="photos-side-headings">films</div>
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/708812445?h=3d330afbf2" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe  title="vimeo-player" src="https://player.vimeo.com/video/487509738?h=0a96bd1704" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe  title="vimeo-player" src="https://player.vimeo.com/video/487509738?h=0a96bd1704" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/487509883?h=199a8b62a3" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/487509891?h=373c2f91be" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/487509891?h=373c2f91be" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/487509879?h=21a39e8da4" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/487509812?h=e7db8d6e42" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/487509812?h=e7db8d6e42" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890223?h=e80f562467" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/784985820?h=2f81c43a46" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/784985820?h=2f81c43a46" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890415?h=eebef02971" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 <div class="white-color" style="background-color: white;">
-  <!-- <div class="photos-side-headings">automobiles</div> -->
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617052578?h=c2cebcac4c" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/610579211?h=2bf8038b84" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/610579211?h=2bf8038b84" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/777387068?h=51b2c165cb" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/784988052?h=83e167be2e" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/784988052?h=83e167be2e" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/790416320?h=5ffd3e9699" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/506978205?h=af5eb54385" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/506978205?h=af5eb54385" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/460258241?h=6f22ca6ce5" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/437827791?h=95bf4cb747" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/463942991?h=0ef893fc44" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/437827791?h=95bf4cb747" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/463942991?h=0ef893fc44" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 <div class="gray-color" style="background-color: #232931;">
-  <!-- <div class="photos-side-headings">healthcare and wellness</div> -->
   <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890415?h=eebef02971" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/416847335?h=15a74cf25d" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/416847335?h=15a74cf25d" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/416846073?h=80caffb343" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/280908889?h=338af54e18" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </div>
-  </div>
-  <div class="gray-color" style="background-color: white;">
-  <!-- <div class="photos-side-headings">fashion beauty and lifestyle</div> -->
-  <div class="videos-grid-div">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/280908889?h=338af54e18" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/653699657?h=7b4a216069" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/339950119?h=49e3978e40" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/339950119?h=49e3978e40" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/339949902?h=9874f93320" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/320906342?h=f4c6ac61ff" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </div>
-</div>
-<div class="gray-color" style="background-color: #232931;">
-  <!-- <div class="photos-side-headings">social media</div> -->
-  <div class="videos-grid-div">
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/632010719?h=1fb9b549a4" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/632004661?h=b22c6f30cd" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/632001096?h=6bfc39933e" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/631998581?h=4c702221d9" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/632865139?h=3079fc9198" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/631995152?h=a2a6c77630" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </div>
-</div>
-  <div class="gray-color" style="background-color: white;">
-  <!-- <div class="photos-side-headings">alcohol</div> -->
-  <div class="videos-grid-div">
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/731026854?h=a81e20d6f6" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/320906342?h=f4c6ac61ff" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/731026854?h=a81e20d6f6" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105779?h=90abc715db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617104600?h=bdf5717856" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
-    <div class="place-start">
-      <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105616?h=2ad44e8562" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617086440?h=9f9cc2d518" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe> -->
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617087246?h=91740c754c" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe> -->
   </div>
-</div>
-
-  <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/373565717?h=b46b309147" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
-  <!-- <!-- <div class="photos-side-headings">asees plus</div> -->
-  <!-- <div class="videos-grid-div">
+  </div>
+  <div class="gray-color" style="background-color: white;">
+  <div class="videos-grid-div">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617104600?h=bdf5717856" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105616?h=2ad44e8562" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617078829?h=dd2d0c64a7" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617082998?h=a455152e5a" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617095739?h=aeb94bba15" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617098860?h=06338c2c78" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/320906891?h=24305a8c2e" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>  -->
-  <!-- <!-- <div class="photos-side-headings">HDFC</div> -->
-  <!-- <div class="videos-grid-div">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/373565717?h=b46b309147" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/354986118?h=620b619fb8" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div> -->
-  <!-- <div class="photos-side-headings">Adani</div> -->
-  <!-- <div class="videos-grid-div">
+  </div>
+</div>
+<div class="gray-color" style="background-color: white;">
+  <div class="videos-grid-div">
+    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617086440?h=9f9cc2d518" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe>
+      <iframe title="vimeo-player" src="https://player.vimeo.com/video/617087246?h=91740c754c" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe> -->
+  </div>
+</div>
+<div class="gray-color" style="background-color: #232931;">
+    <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/324597790?h=ea97640113" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>  -->
-  <!-- <!-- <div class="photos-side-headings">Lenskart</div> -->
-  <!-- <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/382590816?h=e71dc327db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>  -->
-  <!-- <!-- <div class="photos-side-headings">Other Major Brands</div> -->
-  <!-- <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/685783275?h=c618f29b06" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/505822995?h=38f7fafbbd" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/451831761?h=8ee29d93c9" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
@@ -166,8 +106,18 @@
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/416847196?h=d4f699cbad" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/345891676?h=64e0b9701c" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/323431957?h=bb4e5cde87" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/275802533?h=701cbaa91d" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>  -->
+    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/275802533?h=701cbaa91d" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
+  </div>
+</div>
+<div class="gray-color" style="background-color: white;">
+  <div class="videos-grid-div-2">
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/632010719?h=1fb9b549a4" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/632004661?h=b22c6f30cd" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/632001096?h=6bfc39933e" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/631998581?h=4c702221d9" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/632865139?h=3079fc9198" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/631995152?h=a2a6c77630" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
 <div class="container-fluid other-content">
   <div class="row">
