--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaded Feather - About</title>
+    <title>About</title>
     <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -23,10 +23,10 @@
     </div>
     <div class="menu-links">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./work.html">Work</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="social-media">
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="col">
             <div class="other-pages-nav">
-                <a href="index.html"><img class="logo-other-pages" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
+                <a href="./index.html"><img class="logo-other-pages" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
             </div>
         </div>
         <div class="col text-right">
@@ -219,7 +219,7 @@
                 <p class="description">We'll take your campaign to the next level, with our proven planning, Structuring and friendly creatives that will work to produce the best out of the box outcome possible.</p>
             </div>
             <div class="btn-holder">
-                <a href="contact.html" class="cr-btn primary">let's shade</a>
+                <a href="./contact.html" class="cr-btn primary">let's shade</a>
             </div>
         </div>
     </div>
