--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaded Feather - Contact</title>
+    <title>Contact</title>
     <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -22,10 +22,10 @@
     </div>
     <div class="menu-links">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./work.html">Work</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="social-media">
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col">
             <div class="other-pages-nav">
-                <a href="index.html"><img class="logo-other-pages" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
+                <a href="./index.html"><img class="logo-other-pages" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
             </div>
         </div>
         <div class="col text-right">
