--- a/films.html
+++ b/films.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaded Feather - Films</title>
+    <title>Films</title>
     <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -22,10 +22,10 @@
     </div>
     <div class="menu-links">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./work.html">Work</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="social-media">
@@ -127,7 +127,7 @@
               <p class="description">Get in touch with us and we will get the wheels rolling</p>
           </div>
           <div class="btn-holder">
-              <a href="contact.html" class="cr-btn primary">let's shade</a>
+              <a href="./contact.html" class="cr-btn primary">let's shade</a>
           </div>
       </div>
   </div>
