--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaded Feather - Home</title>
+    <title>Home</title>
     <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -22,10 +22,10 @@
     </div>
     <div class="menu-links">
         <ul>
-            <li><a class="li-home" href="index.html">Home</a></li>
-            <li><a class="li-home" href="about.html">About</a></li>
-            <li><a class="li-home" href="work.html">Work</a></li>
-            <li><a class="li-home" href="contact.html">Contact</a></li>
+            <li><a class="li-home" href="./index.html">Home</a></li>
+            <li><a class="li-home" href="./about.html">About</a></li>
+            <li><a class="li-home" href="./work.html">Work</a></li>
+            <li><a class="li-home" href="./contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="social-media">
@@ -61,7 +61,7 @@
         
         <div class="col">
             <div class="logo-holder">
-                <a href="index.html"><img class="logo-navbar" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
+                <a href="./index.html"><img class="logo-navbar" src="./Assets/images/Logo/logo.png" alt="shaded feather logo"></a>
             </div>
             <div class="extra-lg-text home-text">
                 <span class="home-text">write - shoot - edit - release</span><br>
@@ -153,7 +153,7 @@
                 <p class="description">Making films that speaks to the audience, Capturing both attention and Imagination.</p>
             </div>
             <div class="btn-holder">
-                <a href="about.html" class="cr-btn primary">more about us</a>
+                <a href="./about.html" class="cr-btn primary">more about us</a>
             </div>
         </div>
     </div>
@@ -236,7 +236,7 @@
                 <p class="description">Get in touch with us and we will get the wheels rolling</p>
             </div>
             <div class="btn-holder">
-                <a href="contact.html" class="cr-btn primary">let's shade</a>
+                <a href="./contact.html" class="cr-btn primary">let's shade</a>
             </div>
         </div>
     </div>
