--- a/oppo.html
+++ b/oppo.html
@@ -74,7 +74,7 @@
                   <p class="description">Get in touch with us and we will get the wheels rolling</p>
               </div>
               <div class="btn-holder">
-                  <a href="contact.html" class="cr-btn primary">let's shade</a>
+                  <a href="./contact.html" class="cr-btn primary">let's shade</a>
               </div>
           </div>
       </div>
