--- a/blenders.html
+++ b/blenders.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blenders Pride Photography</title>
+    <title>Photography</title>
     <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -74,7 +74,7 @@
                   <p class="description">Get in touch with us and we will get the wheels rolling</p>
               </div>
               <div class="btn-holder">
-                  <a href="contact.html" class="cr-btn primary">let's shade</a>
+                  <a href="./contact.html" class="cr-btn primary">let's shade</a>
               </div>
           </div>
       </div>
